[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerLaserMissle.gd" type="Script" id=1]
[ext_resource path="res://laserRed12.png" type="Texture" id=2]

[node name="PlayerLaserMissle" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -870.812, -1210.21 )
scale = Vector2( 0.999998, 1.3351 )
polygon = PoolVector2Array( 866.909, 927.09, 866.909, 917.894, 866.909, 895.269, 867.851, 893.804, 874.55, 893.804, 876.33, 896.42, 876.33, 924.787, 875.074, 927.09 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( -2.06952, 0 )
scale = Vector2( 0.318388, 0.585744 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 2.87947, 0 )
scale = Vector2( 0.318388, 0.585744 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.82462, 2.38419e-007 )
scale = Vector2( 0.496366, 1.66937 )
[connection signal="area_entered" from="." to="." method="_on_PlayerLaserMissle_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerLaserMissle_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerLaserMissle_body_exited"]
